Fix width on mobile

--- a/style.css
+++ b/style.css
@@ -63,6 +63,15 @@ table th:nth-of-type(5) { width: 12%; }
 table th:nth-of-type(6) { width: 12%; }
 table th:nth-of-type(7) { width: 12%; }
 
+@media screen and (max-width: 700px) {
+  table th:nth-of-type(6), table th:nth-of-type(7),
+  table td:nth-of-type(6), table td:nth-of-type(7) { display: none; }
+  table th:nth-of-type(2) { width: 20%; }
+  table th:nth-of-type(3) { width: 22%; }
+  table th:nth-of-type(4) { width: 1%; }
+  table th:nth-of-type(5) { width: 1%; }
+}
+
 .remove {
   cursor: pointer;
 }
